--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -6,7 +6,7 @@
   <div class="chat-container" *ngFor="let item of items | async">
     <mat-card class="messageCard">
       <mat-card-header>
-          <img src="{{auth.user.photoURL}}" alt="" mat-card-avatar>
+          <img src="{{item.avatar}}" alt="" mat-card-avatar>
         <mat-card-title>{{decryptMessage(item.name)}}</mat-card-title>
       </mat-card-header>
 
